codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__usage_command_menu.snap
---
source: tui/src/chatwidget/tests/usage.rs
assertion_line: 132
expression: "render_bottom_popup(&chat, 80)"
---
  Usage
  Account usage and resets.


› 1. View analytics  Usage history
  2. Redeem reset    2 available

  enter open · esc back
