codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__usage_command_menu_without_resets.snap
---
source: tui/src/chatwidget/tests/usage.rs
assertion_line: 157
expression: "render_bottom_popup(&chat, 80)"
---
 Elpis · model gpt-5.6-sol default · location /tmp/project

  Usage
  Account usage and resets.


› 1. View analytics  Usage history
     Redeem reset    None available

  enter open · esc back
