codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__usage_command_with_invalid_view_reports_usage.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: rendered
---
• Unrecognized command '/usage'. Type "/" for a list of supported commands.


• Unrecognized command '/usage'. Type "/" for a list of supported commands.
