codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__usage_limit_reset_confirmation_monthly.snap
---
source: tui/src/chatwidget/tests/usage.rs
expression: "states.join(\"\\n---\\n\")"
---
Free:
 Elpis · model gpt-5.6-sol · location /tmp/proje
┌──────────────────────────────────────────────┐│CONTEXT LEDGER  Total ≈0 tokens
│ Usage limit resets                           ││admitted
│ 1 usage limit reset available.               ││i = select/deselect all ·
│                                              ││backspace = remove added file
› 1. Cancel                                    ││
  2. Full reset (Monthly)  Does not expire.    ││CONTEXT WINDOW  ≈0 of 258.4k
└──────────────────────────────────────────────┘│used (0%)
  Press enter to confirm or esc to go back      │░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
                                                │■ Conversation (messages) ≈0
                                                │tokens
                                                │
                                                │No portable context is
                                                │available.
---
Go:
 Elpis · model gpt-5.6-sol · location /tmp/proje
┌──────────────────────────────────────────────┐│CONTEXT LEDGER  Total ≈0 tokens
│ Usage limit resets                           ││admitted
│ 1 usage limit reset available.               ││i = select/deselect all ·
│                                              ││backspace = remove added file
› 1. Cancel                                    ││
  2. Use a reset  Reset your current monthly   ││CONTEXT WINDOW  ≈0 of 258.4k
                  usage limit.                 ││used (0%)
└──────────────────────────────────────────────┘│░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
  Press enter to confirm or esc to go back      │■ Conversation (messages) ≈0
                                                │tokens
                                                │
                                                │No portable context is
                                                │available.
---
Business with monthly window:
 Elpis · model gpt-5.6-sol · location /tmp/proje
┌──────────────────────────────────────────────┐│CONTEXT LEDGER  Total ≈0 tokens
│ Usage limit resets                           ││admitted
│ 1 usage limit reset available.               ││i = select/deselect all ·
│                                              ││backspace = remove added file
› 1. Cancel                                    ││
  2. Full reset (Monthly)  Does not expire.    ││CONTEXT WINDOW  ≈0 of 258.4k
└──────────────────────────────────────────────┘│used (0%)
  Press enter to confirm or esc to go back      │░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
                                                │■ Conversation (messages) ≈0
                                                │tokens
                                                │
                                                │No portable context is
                                                │available.
