codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__windows_sandbox_required_enable_prompt.snap
---
source: tui/src/chatwidget/tests/permissions.rs
assertion_line: 635
expression: "render_bottom_popup(&chat, 120)"
---
 Elpis · model gpt-5.6-sol · location /tmp/project

  Your organization requires the default Elpis agent sandbox to continue. Set it up to protect your files and control
  network access.
  Learn more <https://developers.openai.com/codex/windows>


› 1. Set up default sandbox (requires Administrator permissions)
  2. Quit

  enter select · esc back
