codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__windows_sandbox_unelevated_policy.snap
---
source: tui/src/chatwidget/tests/permissions.rs
assertion_line: 1455
expression: "render_bottom_popup(&chat, 100)"
---
 Elpis · model gpt-5.6-sol · location /tmp/project

  Set up the Elpis agent sandbox to protect your files and control network access. Learn more
  <https://developers.openai.com/codex/windows>


› 1. Use non-admin sandbox (higher risk if prompt injected)
  2. Quit

  enter select · esc back
